cmake_minimum_required(VERSION 3.10.2)
project(redplayercore)

add_subdirectory(redbase)
add_subdirectory(reddecoder)
add_subdirectory(reddownload)
add_subdirectory(redrender)
add_subdirectory(redstrategycenter)
add_subdirectory(redsource)
add_subdirectory(redplayer)
if(CMAKE_SYSTEM_NAME STREQUAL "Android")
    add_subdirectory(redpreload)
endif()
